Initial commit for Noel's Portfolio

--- a/Html/hireme.html
+++ b/Html/hireme.html
@@ -93,7 +93,7 @@
       prompt.style.display = 'none';
       video.style.display = 'block';
       goBackBtn.style.display = 'block';
-      video.muted = false; // enable audio
+      video.muted = false;
       video.play();
     });
   </script>
