--- a/Html/recommendations.html
+++ b/Html/recommendations.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Recommendation</title>
-  <link rel="stylesheet" href="../css/portfolio.css"> <!-- Using shared navbar styles -->
+  <link rel="stylesheet" href="../css/portfolio.css"> <!-- Shared navbar styles -->
   <style>
     body {
       margin: 0;
