--- a/Html/skills.html
+++ b/Html/skills.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: #0f0f0f; font-family: Arial, sans-serif; margin: 0; padding-top: 70px;">
 
-  <!-- Sticky Black Navbar (no transparent on scroll) -->
+  <!-- Sticky Black Navbar -->
   <nav class="navbar" style="background-color: #141414;">
     <a href="index.html">
       <img src="../assets/images/navicon1.png" alt="DatGlass Guy" class="logo" />
@@ -24,8 +24,8 @@
   <!-- Programming Languages -->
   <section class="skills-section">
     <div class="section-title">
-        <span>Programming Languages</span>
-        <div class="section-underline" style="width: 350px;"></div>
+      <span>Programming Languages</span>
+      <div class="section-underline" style="width: 350px;"></div>
     </div>
     <div class="card-container">
       <div class="skill-card"><div class="skill-title">Java</div><div class="skill-tag">Object-Oriented</div></div>
@@ -39,8 +39,8 @@
   <!-- Music -->
   <section class="skills-section">
     <div class="section-title">
-        <span>Music</span>
-        <div class="section-underline" style="width: 80px;"></div>
+      <span>Music</span>
+      <div class="section-underline" style="width: 80px;"></div>
     </div>
     <div class="card-container">
       <div class="skill-card"><div class="skill-title">Guitar</div></div>
@@ -53,8 +53,8 @@
   <!-- Extra -->
   <section class="skills-section">
     <div class="section-title">
-        <span>Extra</span>
-        <div class="section-underline" style="width: 80px;"></div>
+      <span>Extra</span>
+      <div class="section-underline" style="width: 80px;"></div>
     </div>
     <div class="card-container">
       <div class="skill-card"><div class="skill-title">Translator</div></div>
@@ -67,8 +67,8 @@
   <!-- Gym Perks -->
   <section class="skills-section">
     <div class="section-title">
-        <span>Gym Perks</span>
-        <div class="section-underline" style="width: 140px;"></div>
+      <span>Gym Perks</span>
+      <div class="section-underline" style="width: 140px;"></div>
     </div>
     <div class="card-container">
       <div class="skill-card"><div class="skill-title">Bench 180</div></div>
