--- a/Html/recruiter.html
+++ b/Html/recruiter.html
@@ -22,6 +22,6 @@
   </style>
 </head>
 <body>
-  <img src="C:\Users\Dell\Documents\Portfolio\assets\images\rere.png" alt="Hey Stalker" />
+  <img src="../assets/images/rere.png" alt="Recruiter Image" />
 </body>
 </html>
