Final updates for GitHub Pages

--- a/Html/choosing.html
+++ b/Html/choosing.html
@@ -4,24 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Who's Watching?</title>
-  <link rel="stylesheet" href="../css/choosing.css" />
+  <link rel="stylesheet" href="/noel_portfolio/css/choosing.css" />
 </head>
 <body>
   <div class="container">
     <h1>Who's Watching?</h1>
     <div class="profiles">
       <!-- Mr. Piyush L Shrestha now opens portfolio.html -->
-      <div class="profile" onclick="location.href='portfolio.html'">
+      <div class="profile" onclick="location.href='/noel_portfolio/Html/portfolio.html'">
         <div class="avatar" id="piyush"></div>
         <p>Mr. Piyush L Shrestha</p>
       </div>
 
-      <div class="profile" onclick="location.href='recruiter.html'">
+      <div class="profile" onclick="location.href='/noel_portfolio/Html/recruiter.html'">
         <div class="avatar" id="recruiter"></div>
         <p>Recruiter</p>
       </div>
 
-      <div class="profile" onclick="location.href='stalker.html'">
+      <div class="profile" onclick="location.href='/noel_portfolio/Html/stalker.html'">
         <div class="avatar" id="stalker"></div>
         <p>Stalker</p>
       </div>
