--- a/Html/hireme.html
+++ b/Html/hireme.html
@@ -80,7 +80,7 @@
   <button id="goBack" onclick="history.back()">Go Back</button>
 
   <video id="hireVideo" autoplay muted playsinline>
-    <source src="../assets/videos/hireme.mp4" type="video/mp4">
+    <source src="/noel_portfolio/assets/videos/hireme.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
