--- a/Html/portfolio.html
+++ b/Html/portfolio.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfolio</title>
-  <link rel="stylesheet" href="../css/portfolio.css" />
+  <link rel="stylesheet" href="/noel_portfolio/css/portfolio.css" />
 </head>
 <body>
   <nav class="navbar" id="navbar">
-    <a href="../index.html">
-      <img src="../assets/images/navicon1.png" alt="DatGlass Guy" class="logo" />
+    <a href="/noel_portfolio/index.html">
+      <img src="/noel_portfolio/assets/images/navicon1.png" alt="DatGlass Guy" class="logo" />
     </a>
     <ul class="nav-links">
-      <li><a href="choosing.html">Home</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="hireme.html">Hire Me</a></li>
+      <li><a href="/noel_portfolio/Html/choosing.html">Home</a></li>
+      <li><a href="/noel_portfolio/Html/resume.html">Resume</a></li>
+      <li><a href="/noel_portfolio/Html/projects.html">Projects</a></li>
+      <li><a href="/noel_portfolio/Html/hireme.html">Hire Me</a></li>
     </ul>
   </nav>
 
@@ -29,7 +29,7 @@
         I also work as an interpreter… and yeah, I might just steal your girl 😏.
       </p>
       <div class="resume-button-wrapper">
-        <a href="resume.html" class="resume-button no-image">
+        <a href="/noel_portfolio/Html/resume.html" class="resume-button no-image">
           <span class="resume-icon">▶</span>
           <span class="resume-text">Resume</span>
         </a>
@@ -45,28 +45,28 @@
   <section class="top-pick-section">
     <h2>Today's Top Pick for Mr. Shrestha</h2>
     <div class="buttons-container">
-      <a href="skills.html" class="button">
-        <img src="../assets/images/skills.jpeg" alt="Skills" class="button-image" />
+      <a href="/noel_portfolio/Html/skills.html" class="button">
+        <img src="/noel_portfolio/assets/images/skills.jpeg" alt="Skills" class="button-image" />
         <span class="button-text">Skills</span>
       </a>
-      <a href="certifications.html" class="button">
-        <img src="../assets/images/certifications.jpeg" alt="Certifications" class="button-image" />
+      <a href="/noel_portfolio/Html/certifications.html" class="button">
+        <img src="/noel_portfolio/assets/images/certifications.jpeg" alt="Certifications" class="button-image" />
         <span class="button-text">Certifications</span>
       </a>
-      <a href="experience.html" class="button">
-        <img src="../assets/images/e.png" alt="Experience" class="button-image" />
+      <a href="/noel_portfolio/Html/experience.html" class="button">
+        <img src="/noel_portfolio/assets/images/e.png" alt="Experience" class="button-image" />
         <span class="button-text">Experience</span>
       </a>
-      <a href="projects.html" class="button">
-        <img src="../assets/images/projects.jpg" alt="Projects" class="button-image" />
+      <a href="/noel_portfolio/Html/projects.html" class="button">
+        <img src="/noel_portfolio/assets/images/projects.jpg" alt="Projects" class="button-image" />
         <span class="button-text">Projects</span>
       </a>
-      <a href="recommendations.html" class="button">
-        <img src="../assets/images/dumb.jpeg" alt="Recommendations" class="button-image" />
+      <a href="/noel_portfolio/Html/recommendations.html" class="button">
+        <img src="/noel_portfolio/assets/images/dumb.jpeg" alt="Recommendations" class="button-image" />
         <span class="button-text">Recommendations</span>
       </a>
-      <a href="contactme.html" class="button">
-        <img src="../assets/images/contact.jpeg" alt="Contact Me" class="button-image" />
+      <a href="/noel_portfolio/Html/contactme.html" class="button">
+        <img src="/noel_portfolio/assets/images/contact.jpeg" alt="Contact Me" class="button-image" />
         <span class="button-text">Contact Me</span>
       </a>
     </div>
