--- a/Html/recruiter.html
+++ b/Html/recruiter.html
@@ -22,6 +22,6 @@
   </style>
 </head>
 <body>
-  <img src="../assets/images/rere.png" alt="Recruiter Image" />
+  <img src="/noel_portfolio/assets/images/rere.png" alt="Recruiter Image" />
 </body>
 </html>
