--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <div id="introContainer">
-    <img id="introImage" src="./assets/images/indexphoto.png" alt="Intro Image">
-    <video id="introVideo" src="./assets/videos/2final.mp4" type="video/mp4"></video>
+    <img id="introImage" src="assets/images/indexphoto.png" alt="Intro Image">
+    <video id="introVideo" src="assets/videos/2final.mp4" type="video/mp4"></video>
   </div>
 
   <script src="./javascript/script.js"></script>
