--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Intro Screen</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="introContainer">
@@ -11,6 +11,6 @@
     <video id="introVideo" src="assets/videos/2final.mp4" type="video/mp4"></video>
   </div>
 
-  <script src="./javascript/script.js"></script>
+  <script src="javascript/script.js"></script>
 </body>
 </html>
