--- a/Html/certifications.html
+++ b/Html/certifications.html
@@ -22,6 +22,6 @@
   </style>
 </head>
 <body>
-  <img src="/noel_portfolio/assets/images/tyappa.png" alt="Hey Stalker" />
+  <img src="../assets/images/tyappa.png" alt="Hey Stalker" />
 </body>
 </html>
