--- a/Html/stalker.html
+++ b/Html/stalker.html
@@ -22,6 +22,6 @@
   </style>
 </head>
 <body>
-  <img src="/noel_portfolio/assets/images/hey-stalker-im.jpg" alt="Hey Stalker" />
+  <img src="../assets/images/hey-stalker-im.jpg" alt="Hey Stalker" />
 </body>
 </html>
