Portfolio 0.0.2: Updated Links

--- a/Html/experience.html
+++ b/Html/experience.html
@@ -22,6 +22,6 @@
   </style>
 </head>
 <body>
-  <img src="../assets/images/exp.jpeg" alt="Hey Stalker" />
+  <img src="/assets/images/exp.jpeg" alt="Hey Stalker" />
 </body>
 </html>
