--- a/Html/projects.html
+++ b/Html/projects.html
@@ -50,7 +50,7 @@
   </div>
 
   <video id="memeVideo" autoplay playsinline>
-    <source src="../assets/videos/capacity.mp4" type="video/mp4">
+    <source src="/assets/videos/capacity.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
