--- a/Html/skills.html
+++ b/Html/skills.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Skills - Noel Karki</title>
-  <link rel="stylesheet" href="../css/portfolio.css">
-  <link rel="stylesheet" href="../css/skills.css">
+  <link rel="stylesheet" href="/css/portfolio.css">
+  <link rel="stylesheet" href="/css/skills.css">
 </head>
 <body style="background-color: #0f0f0f; font-family: Arial, sans-serif; margin: 0; padding-top: 70px;">
 
   <!-- Sticky Black Navbar -->
   <nav class="navbar" style="background-color: #141414;">
-    <a href="../index.html">
-      <img src="../assets/images/navicon1.png" alt="DatGlass Guy" class="logo" />
+    <a href="/index.html">
+      <img src="/assets/images/navicon1.png" alt="DatGlass Guy" class="logo" />
     </a>
     <ul class="nav-links">
-      <li><a href="../Html/choosing.html">Home</a></li>
-      <li><a href="../Html/resume.html">Resume</a></li>
-      <li><a href="../Html/projects.html">Projects</a></li>
-      <li><a href="../Html/hireme.html">Hire Me</a></li>
+      <li><a href="/Html/choosing.html">Home</a></li>
+      <li><a href="/Html/resume.html">Resume</a></li>
+      <li><a href="/Html/projects.html">Projects</a></li>
+      <li><a href="/Html/hireme.html">Hire Me</a></li>
     </ul>
   </nav>
 
