Portfolio 0.0.4: Updated URL Mishaps

--- a/Html/contactme.html
+++ b/Html/contactme.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact Me</title>
-  <link rel="stylesheet" href="/css/contactme.css">
+  <link rel="stylesheet" href="../css/contactme.css">
 </head>
 <body>
 
   <div class="card">
-    <img src="/assets/images/noel.jpg" alt="Noel Karki">
+    <img src="../assets/images/noel.jpg" alt="Noel Karki">
     <h2>Noel Karki</h2>
     <p>Professional Nalayak Beta</p>
     <p>With 20+ years of free loading experience</p>
