--- a/Html/resume.html
+++ b/Html/resume.html
@@ -35,7 +35,7 @@
 
   <h1>My Resume</h1>
   <div class="resume-container">
-    <img src="/assets/images/resume.jpg" alt="My Resume">
+    <img src="../assets/images/resume.jpg" alt="My Resume">
   </div>
 
 </body>
