--- a/Html/choosing.html
+++ b/Html/choosing.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Who's Watching?</title>
-  <link rel="stylesheet" href="/css/choosing.css" />
+  <link rel="stylesheet" href="../css/choosing.css" />
 </head>
 <body>
   <div class="container">
