--- a/Html/recommendations.html
+++ b/Html/recommendations.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Recommendation</title>
-  <link rel="stylesheet" href="/css/portfolio.css"> <!-- Shared navbar styles -->
+  <link rel="stylesheet" href="../css/portfolio.css"> <!-- Shared navbar styles -->
   <style>
     body {
       margin: 0;
@@ -55,18 +55,18 @@
 
   <!-- Sticky Black Navbar -->
   <nav class="navbar" style="background-color: #141414;">
-    <a href="/index.html">
-      <img src="/assets/images/navicon1.png" alt="DatGlass Guy" class="logo" />
+    <a href="../index.html">
+      <img src="../assets/images/navicon1.png" alt="DatGlass Guy" class="logo" />
     </a>
     <ul class="nav-links">
-      <li><a href="/Html/choosing.html">Home</a></li>
-      <li><a href="/Html/resume.html">Resume</a></li>
-      <li><a href="/Html/projects.html">Projects</a></li>
-      <li><a href="/Html/hireme.html">Hire Me</a></li>
+      <li><a href="../html/choosing.html">Home</a></li>
+      <li><a href="../html/resume.html">Resume</a></li>
+      <li><a href="../html/projects.html">Projects</a></li>
+      <li><a href="../html/hireme.html">Hire Me</a></li>
     </ul>
   </nav>
 
-  <img class="elon-pic" src="/assets/images/elon.jpeg" alt="Elon Musk">
+  <img class="elon-pic" src="../assets/images/elon.jpeg" alt="Elon Musk">
   <div class="name">— Elon Musk</div>
 
   <div class="recommendation-box">
